WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316004
[WTF][glib] Fix build with -DENABLE_JOURNALD_LOG=FALSE
https://bugs.webkit.org/show_bug.cgi?id=316004
Summary
[WTF][glib] Fix build with -DENABLE_JOURNALD_LOG=FALSE
Alicia Boya García
Reported
2026-06-01 08:34:32 PDT
This patch fixes builds that use fprintf-based logging with clang 22. This is the case for glib builds when configuring with -DENABLE_JOURNALD_LOG=FALSE. This patch is the counterpart to
https://bugs.webkit.org/show_bug.cgi?id=312457
where similar compiler flag guards had to be added for the journald-backed logging code. * Source/WTF/wtf/Assertions.h: * Source/WTF/wtf/Logger.h: (WTF::Logger::log):
Attachments
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2026-06-01 08:36:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66173
EWS
Comment 2
2026-06-02 09:59:03 PDT
Committed
314374@main
(e1d8d5471e3f): <
https://commits.webkit.org/314374@main
> Reviewed commits have been landed. Closing PR #66173 and removing active labels.
EWS
Comment 3
2026-06-07 14:38:10 PDT
Committed
305877.710@webkitglib/2.52
(31deefad901e): <
https://commits.webkit.org/305877.710@webkitglib/2.52
> Reviewed commits have been landed. Closing PR #66632 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug