[WTF][glib] Fix build with -DENABLE_JOURNALD_LOG=FALSE https://bugs.webkit.org/show_bug.cgi?id=316004

Reviewed by Adrian Perez de Castro.

This patch fixes builds that use fprintf-based logging with clang 22.
This is the case for glib builds when configuring with
-DENABLE_JOURNALD_LOG=FALSE.

This patch is the counterpart to
https://bugs.webkit.org/show_bug.cgi?id=312457 where similar compiler
flag guards had to be added for the journald-backed logging code.

* Source/WTF/wtf/Assertions.h:
* Source/WTF/wtf/Logger.h:
(WTF::Logger::log):

Canonical link: https://commits.webkit.org/314374@main